<?xml version="1.0"?>
<package>
  <name>panther_bringup</name>
  <version>1.0.0</version>
  <description>This package bring-up your Panther robot</description>

  <license>MIT</license>
  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <url type="repository">https://github.com/rbonghi/panther</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>panther_control</run_depend>

</package>
