<?xml version="1.0"?>
<package format="2">
  <name>panther_description</name>
  <version>1.0.0</version>
  <description>The panther_description package</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>

  <license>TODO</license>

  <url type="website">http://rnext.it/panther</url>

  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
  
</package>
