<?xml version="1.0"?>
<package format="2">
  <name>panther_description</name>
  <version>1.0.0</version>
  <description>This package collect all Panther meshes and TF configuration</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <license>MIT</license>
  
  <url type="website">https://rnext.it/panther</url>
  <url type="repository">https://github.com/rpanther/panther</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO: Check if require another more dependencies -->
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  
</package>
