<?xml version="1.0"?>
<package>
  <name>panther_visualization</name>
  <version>1.0.0</version>
  <description>This package visualize Panther on rviz 
  </description>

  <license>MIT</license>
  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <url type="repository">https://github.com/rbonghi/panther</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>roslaunch</build_depend>-->

</package>
